Fix bug where the terms checkbox becomes wider on mobile.

--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -266,6 +266,9 @@ input:focus {
 					//margin-top: -0.8em;
 					background-color: @color__body--background;
 					border: 1px solid fade(@color__form--border, 27%);
+					min-width: auto;
+					max-height: none;
+					.border-radius(0);
 				}
 
 				&:after {
